syntax = "proto3";
package go.micro.secbuy.srv.stock;

service StockService {
    rpc CreateCommodity (Commodity) returns (Response);
    rpc GetCommodity(GetRequest) returns (Response);
}

// 商品
message Commodity {
    int32 id = 1;
    string name = 2;
    int32 count = 3;
    int32 sale = 4;
    string createTime = 5;
}

// 查看商品信息的请求
message GetRequest {
    int32 id = 1;
}

// 结果
message Response {
    bool success = 1;
    Error error = 2;
    Commodity commodity = 3;
}

// 错误信息
message Error {
    int32 code = 1;
    string detail = 2;
}


